# SmoothParticleNets

./: .gitignore  CMakeLists.txt  LICENSE  README.md  REQUIREMENTS.txt  build.py  install.py  package.xml  setup.py  timings_n2.csv  timings_n2_shared.csv  timings_neighborlist.csv
docs/: README.md  defstyle.css  index.html  test.md
docs/convsdf/: README.md
docs/convsp/: README.md
docs/imageprojection/: README.md
docs/particlecollision/: README.md
docs/particleprojection/: README.md
docs/reorderdata/: README.md
examples/: convsp_example.py  fluid_sim.py
python/SmoothParticleNets/: .ParticleCollision.py.swp  ._sdfs2grid.py  .convsdf.py.swp  .convsp.py.swp  ImageProjection.py  ParticleCollision.py  ParticleProjection.py  __init__.py  convsdf.py  convsp.py  error_checking.py  f_grid.py  grid2particles.py  kernels.py  neighborlist.py  (+2 more)
src/: common_funcs.h  constants.h  cpu_layer_funcs.c  cpu_layer_funcs.cpp  cuda_layer_funcs.c  cuda_layer_funcs.cpp  cuda_spn.h  fgrid.c  gpu_kernels.cu  gpu_kernels.h  grid2particles.c  non_cuda_spn.h  particles2grid.c  spn.h
test/: ._test_grid2particles.py  convsp_example.py  gradcheck.py  lookup_struct_test.cu  particles2grid_example.py  particles2grid_nonsymmetry_example.py  regular_grid_interpolater.py  tblogger.py  test_convsdf.py  test_convsp.py  test_f_grid.py  test_grid2particles.py  test_imageprojection.py  test_particlecollision.py  test_particles2grid.py  test_sdfs2grid.py  time_convsp.py
tests/: convsp_example.py  gradcheck.py  test_convsdf.py  test_convsp.py  test_imageprojection.py  test_particleprojection.py
(+1 files in other folders)
